# study

./: learn.txt  netrome.txt  openvswitch_flow.txt  rdma.md  sonic.txt  usage.txt
document/linux/network service/: LVS_NAT.txt  iptables_module.txt  quagga_ecmp.txt
document/linux/sdn/: docker.txt
document/program/script/: HTML5.docx  vim.txt
document/program/script/makefile/cmake/protype/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.bak  Main  Makefile  cmake_install.cmake
document/program/script/makefile/cmake/protype/Demo/: CMakeLists.txt  CMakeLists.txt.bak  Makefile  cmake_install.cmake  helloDemo
document/program/script/makefile/cmake/protype/Hello/: CMakeLists.txt  CMakeLists.txt.bak  Makefile  cmake_install.cmake
document/project/bpf_jit/: READ ME.txt  bpf_jit_report--how jit work.doc  bpf_jit_report.doc  my_filter_new  my_filter_old  opt_jit_opcode
document/project/commonlib_dpdk/: CommonLib.h
document/project/tmp/: pthread.txt  tips.AI_PASSIVE.txt
document/tmp/: iptable.txt  malloc.c  malloc.txt  test.txt
document/tmp/hidden_dynamicLib/: foo.c  main.c  mylib.conf  reload.sh
document/vpn_docker/: usage
document/webservice/html/: html.txt
document/webservice/mysql/: mysql.py  test.py
document/webservice/nginx/: nginx.txt
dpdk/: pkgen_dpdk.txt
dpdk/example/: i40e_fdir_rss.c  test.pcap
dpdk/example/dpdk_new/: Makefile  usage.txt
dpdk/example/dpdk_pcap_reta_fdir/: usage.txt
dpdk/example/dpdk_tracelog/: Makefile  usage.txt
sdn/mininet/: mininet_net.py  mininet_test.py  mininet_topo.py
sdn/openvswitch/: command.txt  kernel_flow.txt  openvswitch_update.sh  ovs_diff.txt
sdn/openvswitch/document/: ovs_flow_handle.txt  ovs_upcall_handle.txt
sdn/ryu/: log.config  ryu_test.py  ryu_test2.py  settings.py
study/cmake/myfind/: CMakeLists.txt
study/cplusplus/: template_static.cpp
study/cplusplus/algrithm/: accumulate  accumulate.cpp  copy.cpp  equal_mismatch.cpp  find.cpp  partition.cpp
study/cplusplus/container/: vector
study/hugemem/: memory.h
study/ptrace/: ptracelib.c
tmp/: computer_system  distributed_system-hash  docker_tech.txt
tools/: assemle_to_machine.s  goto  ip_to_int.sh  pd.txt  somethng_install.txt  vpn
tools/build_envirment/: build_envirtment.txt  v2ray.config  vimrc
tools/trex-test/: trex_cfg_uxr.yaml  uxr.py
virtualization/: wx.kvm  wx_macvtap.xml  wx_ovs.xml  wx_sriov.xml
virtualization/docker/: namespace.sh  namespace_gateway.sh
virtualization/libvirt/: migtrate.tgz
vpn_docker/: Dockerfile
webservice/mysql/: mysql.txt
work/: 6rd.txt  a.v  barrier.txt  bfd_group.txt  bgp_metric.sh  bond.sh  docker.txt  document.txt  dp_hash_group.txt  endianness.c  git.txt  goto  inotify.c  ipsec.pptx  libev.c  libnl3.c  nfqueue.c  paster_file.c  preempt.md  qemu-network  rcu  roce_conf.txt  setup_mpls.sh  setup_vpp.sh  shell.txt  srv6.docx  str.c  tc-flower.sh  tcp_nagle  turbo.txt  udev_name  vim.txt  wx_debug.sh  yum.txt
work/act_police_4.1/: Makefile  act_police.c  usage.txt
work/bgp/: 5-1-BGP.ppt  5-2-BGP.ppt  5-3-BGP.ppt  5-4-BGP.ppt  5-5-BGP.ppt  5-6-BGP.ppt
work/bridge/: multicast_soonping  vlan.sh  vxlan_access_vlan.sh  vxlan_vlan.sh
work/cmake/myfind/myfind/: CMakeLists.txt  myfind.cpp  myfind.h
work/cmake/myprogram/: CMakeLists.txt  COPYRIGHT
work/cmake/myprogram/doc/: myprogram.txt
work/cmake/myprogram/lib/: mylib.cpp
work/cmake/myprogram/src/: main.cpp
work/cplusplus/: placement.cpp
work/docker/: docker.txt
work/ebpf/: bpof-examples.tar.bz2  dpdk_ebpf.md  ebpf.md  trace.md
work/evpn_test/: build_frr.sh
work/expect/: config.exp  neighbor.exp  router.exp
work/filter_example/: Makefile  filter_example.c
work/gdb/: gdb.txt  test.c
work/go/: go.txt
work/hosttrack/: 0001-hosttrackd-daemon-add.patch  0002-arp2host-add-arp2host.patch  0003-hosttrack-add-vty-command.patch  0004-hosttrack-add-zebra-interface.patch  0005-hosttrackd-add-hosttrack_netlink.patch  0006-hosttrackd-add-support-distrbute-the-arp2host-route.patch  0007-hosttrackd-support-running-config-in-vtysh.patch  0008-hosttrackd-recovering-from-configuration-file.patch
work/hugemem/: memory.c
work/ipv4toipv6/: ovs.sh
work/myprogram/protos/: CMakeLists.txt  unetanalysis.177000.178000.proto
work/myprogram/src/: CMakeLists.txt  main.cpp  myfunc.cpp
work/nat64/: .gateway.sh.swo  0001-make-router-compiler-ok.patch  0001-make-tap-inject-plugin-work.patch  0002-bypass-interface-address.patch  gateway.sh  v4.sh  v6.sh  vpp.sh
work/nf-conntrack-bridge/: local-vlan.sh  nf-conntrack-bridge-sample.sh  nf-conntrack-bridge-vlan-meta.sh  nf-conntrack-bridge-vlan.sh  nf-conntrack-bridge-vxlan.sh
work/nf-offload/: nf-offload.iif.sh  nf-offload.no-tunnel.sh  nf-offload.zone.sh
work/nf_conntrack_notifier_example/: Makefile  conntrack_notifier_example.c
work/nftable/: nft.txt
work/ovs/: bundle.txt  group.txt  ovs-flow_debug  restart_ovs.sh
work/ovs-controller/: traceroute-switch.c
work/ovs-controller-id/: learning-switch.c  learning-switch.h  ovs-testcontroller.c
work/ovs_tc_ct_offload/: ovs-ct-offload-hw.sh  ovs-ct-offload-sw.sh  ovs-ct-offload_tun-sw.sh
work/proxy/: config.json  go.sh
work/python/: python.txt
work/rcu_example/: test.c
work/rcu_hlist/: Makefile  misc_device.c  uake.h
work/rdma/: .rdma.md.swp  rdma.md
work/rte_flow/: rte_flow_hws  rte_flow_hws.patch
work/snat_pool/: Makefile  ipt_SNATPOOL.c  libipt_SNATPOOL.c  usage.txt
work/spider/: myspider.py  myspider_login.py  scrapy.txt
work/splice/: splice  splice.c  usage.txt
work/static_nat/: Makefile  ipt_STATICSRC.c  libipt_STATICSRC.c  usage.txt
work/systemctl/: foo  foo.service  usage.txt
work/tc-flower/: del_tc_rule.sh  tc-flower.sh
work/tcpss_kmod/: Makefile  tcpss.c
work/udp_broadcast/: udp_broadcast_client  udp_broadcast_client.c  udp_broadcast_server  udp_broadcast_server.c
work/understand_computer/: understand_computer.txt
work/user_mem/: Makefile  mem.c  test.c  usage.txt
work/vim/: tags_cscope.txt
work/vrf/: vrf.sh  vrf.txt
work/wpf_install/: setup.txt
work/xfrm/: 1.sh  2.sh  gw1.sh  gw2.sh
(+1663 files in other folders)
